<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Karumi.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/action_login"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/action_login" />

</LinearLayout>